---
source: crates/ruff_linter/src/rules/airflow/mod.rs
---
AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:18:18
   |
16 | task_2 = BashOperator(
17 |     task_id="task_2",
18 |     bash_command="{{ ti.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
19 | )
   |
help: Replace with `task_1.output`
15 | task_1 = PythonOperator(task_id="task_1", python_callable=my_callable)
16 | task_2 = BashOperator(
17 |     task_id="task_2",
   -     bash_command="{{ ti.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
18 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
19 | )
20 | 
21 | # With task_instance instead of ti
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:24:18
   |
22 | task_3 = BashOperator(
23 |     task_id="task_3",
24 |     bash_command="{{ task_instance.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
25 | )
   |
help: Replace with `task_1.output`
21 | # With task_instance instead of ti
22 | task_3 = BashOperator(
23 |     task_id="task_3",
   -     bash_command="{{ task_instance.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
24 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
25 | )
26 | 
27 | # Positional argument
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:30:18
   |
28 | task_4 = BashOperator(
29 |     task_id="task_4",
30 |     bash_command="{{ ti.xcom_pull('task_1') }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
31 | )
   |
help: Replace with `task_1.output`
27 | # Positional argument
28 | task_4 = BashOperator(
29 |     task_id="task_4",
   -     bash_command="{{ ti.xcom_pull('task_1') }}",  # AIR004 (fix: task_1.output)
30 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
31 | )
32 | 
33 | # Double quotes in template
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:36:18
   |
34 | task_5 = BashOperator(
35 |     task_id="task_5",
36 |     bash_command='{{ ti.xcom_pull(task_ids="task_1") }}',  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
37 | )
   |
help: Replace with `task_1.output`
33 | # Double quotes in template
34 | task_5 = BashOperator(
35 |     task_id="task_5",
   -     bash_command='{{ ti.xcom_pull(task_ids="task_1") }}',  # AIR004 (fix: task_1.output)
36 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
37 | )
38 | 
39 | # No spaces in braces
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:42:18
   |
40 | task_6 = BashOperator(
41 |     task_id="task_6",
42 |     bash_command="{{ti.xcom_pull(task_ids='task_1')}}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
43 | )
   |
help: Replace with `task_1.output`
39 | # No spaces in braces
40 | task_6 = BashOperator(
41 |     task_id="task_6",
   -     bash_command="{{ti.xcom_pull(task_ids='task_1')}}",  # AIR004 (fix: task_1.output)
42 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
43 | )
44 | 
45 | # Singular task_id keyword
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:48:18
   |
46 | task_7 = BashOperator(
47 |     task_id="task_7",
48 |     bash_command="{{ ti.xcom_pull(task_id='task_1') }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
49 | )
   |
help: Replace with `task_1.output`
45 | # Singular task_id keyword
46 | task_7 = BashOperator(
47 |     task_id="task_7",
   -     bash_command="{{ ti.xcom_pull(task_id='task_1') }}",  # AIR004 (fix: task_1.output)
48 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
49 | )
50 | 
51 | # With sensor
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:54:22
   |
52 | task_8 = ExternalTaskSensor(
53 |     task_id="task_8",
54 |     external_task_id="{{ ti.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
55 | )
   |
help: Replace with `task_1.output`
51 | # With sensor
52 | task_8 = ExternalTaskSensor(
53 |     task_id="task_8",
   -     external_task_id="{{ ti.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
54 +     external_task_id=task_1.output,  # AIR004 (fix: task_1.output)
55 | )
56 | 
57 | # Provider operator
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:60:14
   |
58 | task_9 = HttpOperator(
59 |     task_id="task_9",
60 |     endpoint="{{ ti.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
61 | )
   |
help: Replace with `task_1.output`
57 | # Provider operator
58 | task_9 = HttpOperator(
59 |     task_id="task_9",
   -     endpoint="{{ ti.xcom_pull(task_ids='task_1') }}",  # AIR004 (fix: task_1.output)
60 +     endpoint=task_1.output,  # AIR004 (fix: task_1.output)
61 | )
62 | 
63 | 
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:67:18
   |
65 | task_18 = BashOperator(
66 |     task_id="task_18",
67 |     bash_command="{{ ti.xcom_pull(task_ids=['task_1']) }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
68 | )
   |
help: Replace with `task_1.output`
64 | # task_ids as a single-element list
65 | task_18 = BashOperator(
66 |     task_id="task_18",
   -     bash_command="{{ ti.xcom_pull(task_ids=['task_1']) }}",  # AIR004 (fix: task_1.output)
67 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
68 | )
69 | 
70 | # task_ids as a single-element tuple
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:73:18
   |
71 | task_19 = BashOperator(
72 |     task_id="task_19",
73 |     bash_command="{{ ti.xcom_pull(task_ids=('task_1',)) }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
74 | )
   |
help: Replace with `task_1.output`
70 | # task_ids as a single-element tuple
71 | task_19 = BashOperator(
72 |     task_id="task_19",
   -     bash_command="{{ ti.xcom_pull(task_ids=('task_1',)) }}",  # AIR004 (fix: task_1.output)
73 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
74 | )
75 | 
76 | # With explicit key='return_value' (default)
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:79:18
   |
77 | task_20 = BashOperator(
78 |     task_id="task_20",
79 |     bash_command="{{ ti.xcom_pull(task_ids='task_1', key='return_value') }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
80 | )
   |
help: Replace with `task_1.output`
76 | # With explicit key='return_value' (default)
77 | task_20 = BashOperator(
78 |     task_id="task_20",
   -     bash_command="{{ ti.xcom_pull(task_ids='task_1', key='return_value') }}",  # AIR004 (fix: task_1.output)
79 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
80 | )
81 | 
82 | # List + key='return_value'
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:85:18
   |
83 | task_21 = BashOperator(
84 |     task_id="task_21",
85 |     bash_command="{{ ti.xcom_pull(task_ids=['task_1'], key='return_value') }}",  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
86 | )
   |
help: Replace with `task_1.output`
82 | # List + key='return_value'
83 | task_21 = BashOperator(
84 |     task_id="task_21",
   -     bash_command="{{ ti.xcom_pull(task_ids=['task_1'], key='return_value') }}",  # AIR004 (fix: task_1.output)
85 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
86 | )
87 | 
88 | # task_instance with list + key="return_value"
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "task_1" instead of `xcom_pull` in a template string
  --> AIR004.py:91:18
   |
89 | task_22 = BashOperator(
90 |     task_id="task_22",
91 |     bash_command='{{ task_instance.xcom_pull(task_ids=["task_1"], key="return_value") }}',  # AIR004 (fix: task_1.output)
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
92 | )
   |
help: Replace with `task_1.output`
88 | # task_instance with list + key="return_value"
89 | task_22 = BashOperator(
90 |     task_id="task_22",
   -     bash_command='{{ task_instance.xcom_pull(task_ids=["task_1"], key="return_value") }}',  # AIR004 (fix: task_1.output)
91 +     bash_command=task_1.output,  # AIR004 (fix: task_1.output)
92 | )
93 | 
94 | # Pulling output from a @task-decorated function
note: This is an unsafe fix and may change runtime behavior

AIR004 [*] Use the `.output` attribute on the task object for "extract_data" instead of `xcom_pull` in a template string
   --> AIR004.py:102:18
    |
100 | task_16 = BashOperator(
101 |     task_id="task_16",
102 |     bash_command="{{ ti.xcom_pull(task_ids='extract_data') }}",  # AIR004 (fix: extract_data.output)
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
103 | )
    |
help: Replace with `extract_data.output`
99  | 
100 | task_16 = BashOperator(
101 |     task_id="task_16",
    -     bash_command="{{ ti.xcom_pull(task_ids='extract_data') }}",  # AIR004 (fix: extract_data.output)
102 +     bash_command=extract_data.output,  # AIR004 (fix: extract_data.output)
103 | )
104 | 
105 | # Referencing a task_id that is not a visible variable (no fix, but still flags)
note: This is an unsafe fix and may change runtime behavior

AIR004 Use the `.output` attribute on the task object for "unknown_task" instead of `xcom_pull` in a template string
   --> AIR004.py:108:18
    |
106 | task_17 = BashOperator(
107 |     task_id="task_17",
108 |     bash_command="{{ ti.xcom_pull(task_ids='unknown_task') }}",  # AIR004 (no fix)
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
109 | )
    |
help: Replace with `unknown_task.output`
